# ansible-role-job-data

./: README.md  setup.cfg  test-requirements.txt  tox.ini
infrared_plugin/: main.yml  plugin.spec
playbooks/: backup.yaml  restore.yaml
roles/backup/defaults/: main.yaml
roles/backup/tasks/: main.yaml
roles/restore/defaults/: main.yaml
roles/restore/tasks/: main.yaml
tasks/: clone.yaml  commit_push.yaml  config_ssh.yaml
templates/: ssh_config.j2
