[metadata]
name = job-data
summary =
description-file =
    README.md
author = Martin Kopec
author-email = mkopec@redhat.com
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    job_data
data_files =
    usr/local/share/ansible/roles/install_skiplist = roles/backup/*
    usr/local/share/ansible/roles/validate_yaml = roles/restore/*

[entry_points]
console_scripts =
    job-data = job_data.main:main
job_data.cm =
    backup = job_data.backup:backup
    restore = job_data.restore:restore

